syntax = "proto3";

package grpc1;

service CacheService {
    rpc Store(StoreReq) returns (StoreResp) {}
    rpc Get(GetReq) returns (GetResp) {}
    rpc Dump(DumpReq) returns (stream DumpResp) {}
}

message StoreReq {
    string key = 1;
    bytes value = 2;
}

message StoreResp {

}

message GetReq {
    string key = 1;
}

message GetResp {
    bytes value = 1;
}

message DumpReq {

}

message DumpResp {
    string key = 1;
    bytes value = 2;
}